tree-sitter-abap/grammar.js
    program: $ => repeat($._statement),

    _statement: $ =>
      choice(
        $.class_declaration,
        $.class_implementation,
        $.class_publication,
        $.class_local_friend_publication,
        $.interface_declaration,
        $.function_implementation,
        $.form_definition,
        $._implementation_statement
      ),

    _implementation_statement: $ =>
      choice(
        $.variable_declaration,
        $.chained_variable_declaration,
        $.chained_structure_declaration,
        $.loop_statement,
        $.field_symbol_declaration,
        $.chained_field_symbol_declaration,
        $.exit_statement,
        $.continue_statement,
        $.report_statement,
        $.if_statement,
        $.case_statement,
        $.perform_statement,
        $.return_statement,
        $.check_statement,
        $.assignment,
        $.select_statement_obsolete,
        $.read_table_statement,
        $.try_catch_statement,
        $.write_statement,
        $.chained_write_statement,
        $.call_method,
        $.call_method_static,
        $.call_method_instance,
        $.call_function,
        $.raise_exception_statement,
        $.clear_statement,
        $.append_statement,
        $.create_object_statement,
        $.include_statement,
        $.macro_include,
        $.raise_statement,
        $.append_statement_obsolete
      ),

    _typing: $ => choice($.generic_typing, $.complete_typing),

    complete_typing: $ =>
      choice(
        seq(kw("type"), alias($.name, $.type)),
        seq(kw("type"), kw("ref"), kw("to"), alias($.name, $.type))
      ),

    if_statement: $ =>
      seq(
        kw("if"),
        $._logical_expression,
        ".",
        //FIXME: not all statements are allowed in statement_block
        repeat($._statement),
        repeat($.elseif_block),
        optional($.else_block),
        kw("endif"),
        "."
      ),

    elseif_block: $ =>
      seq(kw("elseif"), $._logical_expression, ".", repeat($._statement)),

    else_block: $ => seq(kw("else"), ".", repeat($._statement)),

    case_statement: $ =>
      seq(
        kw("case"),
        $._general_expression_position,
        ".",
        repeat($.when_block),
        kw("endcase"),
        "."
      ),

    when_block: $ =>
      seq(
        kw("when"),
        choice(
          kw("others"),
          seq(
            $._general_expression_position,
            repeat(seq(kw("or"), $._general_expression_position))
          )
        ),
        ".",
        repeat($._statement)
      ),

    check_statement: $ => seq(kw("check"), $._logical_expression, "."),

    _logical_expression: $ =>
      choice(
        $.comparison_expression,
        prec.right(4, seq(kw("not"), $._logical_expression)),
        prec.left(
          1,
          seq($._logical_expression, kw("or"), $._logical_expression)
        ),
        prec.left(
          2,
          seq($._logical_expression, kw("and"), $._logical_expression)
        ),
        prec.left(5, seq($._operand, kw("is"), kw("initial")))
      ),

    comparison_expression: $ =>
      seq(
        $._general_expression_position,
        choice(
          "=",
          kw("eq"),
          "<>",
          kw("ne"),
          ">",
          kw("gt"),
          "<",
          kw("lt"),
          ">=",
          kw("ge"),
          "<=",
          kw("le")
        ),
        $._general_expression_position
      ),

    _general_expression_position: $ =>
      choice(
        $.numeric_literal,
        $.character_literal,
        $._data_object,
        $._calculation_expression
      ),

    arithmetic_expression: $ =>
      choice(
        prec.left(
          1,
          seq(
            $._general_expression_position,
            "+",
            $._general_expression_position
          )
        ),
        prec.left(
          1,
          seq(
            $._general_expression_position,
            "-",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "*",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "/",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "DIV",
            $._general_expression_position
          )
        ),
        prec.left(
          2,
          seq(
            $._general_expression_position,
            "MOD",
            $._general_expression_position
          )
        ),
        prec.left(
          3,
          seq(
            $._general_expression_position,
            "**",
            $._general_expression_position
          )
        )
      ),

    _writeable_expression: $ =>
      choice(
        // inline declaration
        // constructor expression
        $.table_expression
      ),

    _data_object: $ =>
      choice(
        $.name,
        $.field_symbol_name,
        $.structured_data_object,
        $.attribute_access_static
      ),

    assignment: $ =>
      seq(
        choice($._data_object, $._writeable_expression),
        "=",
        $._general_expression_position,
        "."
      ),

    write_statement: $ =>
      seq(kw("write"), optional("/"), $._general_expression_position, "."),

    append_statement: $ =>
      seq(
        kw("append"),
        field("line_spec", $.name),
        kw("to"),
        field("itab", $.name),
        "."
      ),

    form_definition: $ =>
      seq(
        kw("form"),
        field("name", $.name),
        field("tables_parameters", optional($._form_tables)),
        field("using_parameters", optional($._form_using)),
        field("changing_parameters", optional($._form_changing)),
        ".",
        repeat($._implementation_statement),
        kw("endform"),
        "."
      ),

    _form_tables: $ => seq(kw("tables"), repeat1($.form_parameter)),

    _form_using: $ => seq(kw("using"), repeat1($.form_parameter)),

    _form_changing: $ => seq(kw("changing"), repeat1($.form_parameter)),

    form_parameter: $ =>
      seq(
        choice(seq(kw("value"), "(", $.name, ")"), $._operand),
        optional(
          choice($._typing, seq(kw("structure"), alias($.name, $.type)))
        )
      ),

    perform_statement: $ =>
      seq(
        kw("perform"),
        field("name", $.name),
        optional(
          choice(
            seq(token.immediate("("), field("program", $.name), ")"),
            seq(kw("in"), kw("program"), field("program", $.name))
          )
        ),
        optional(seq(kw("if"), kw("found"))),
        field("tables_parameters", optional($._perform_tables)),
        field("using_parameters", optional($._perform_using)),
        field("changing_parameters", optional($._perform_changing)),
        "."
      ),

    _perform_tables: $ => seq(kw("tables"), repeat1($._data_object)),

    _perform_using: $ => seq(kw("using"), repeat1($._perform_argument)),

    _perform_changing: $ => seq(kw("changing"), repeat1($._perform_argument)),

    _operand: $ => choice($._escaped_operand, $.name),

    numeric_literal: $ => /[0-9]+/,

    character_literal: $ => /'[^']+'/,

    name: $ => /[a-zA-Z_][a-zA-Z0-9_]{0,29}/i,
